# g-cli

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
common/: hsl256  rgb256
include/: colors.h  gcli.h
include/gcli/: colors.h  gcli.h
src/: colors.c  gcli.c
